# aws_scraper

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
cdk/: cdk.json  cdk.py
src/: index.py  requirements.txt  settings.py
tests/: test_scrape.py
